[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycontrol"
version = "1.0.000"
description = "PyControl: pequeño paquete de control para PyHamRemote"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ham", "radio", "control"]

[project.optional-dependencies]
docs = ["pdoc>=12"]

[tool.setuptools]
package-dir = {"" = "src"}
